<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/conversion"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/MtoK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelOne">

        <RadioButton
            android:id="@+id/MtoK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioOnClick"
            android:text="@string/miles_to_kilometers" />

        <RadioButton
            android:id="@+id/KtoM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioOnClick"
            android:text="@string/kilometers_to_miles" />
    </RadioGroup>

    <TextView
        android:id="@+id/labelTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/miles_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/userInput"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="doPress"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="@+id/userInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/labelTwo"
        app:layout_constraintTop_toBottomOf="@+id/labelTwo" />

    <TextView
        android:id="@+id/labelThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers_value"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/result"
        app:layout_constraintStart_toStartOf="@+id/labelTwo" />

    <TextView
        android:id="@+id/LabelFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/conversion_history"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelThree"
        app:layout_constraintTop_toBottomOf="@+id/labelThree" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/convertButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/LabelFour"
        app:layout_constraintTop_toBottomOf="@+id/LabelFour" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="clearOnClick"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@+id/history"
        app:layout_constraintStart_toStartOf="@+id/history"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_vertical"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>